# ncflow

./: .gitignore  LICENSE  README.md  example_main.py  pyproject.toml
examples/: datagen.py  pendulum.py
examples/brusselator/: dataset.py  main.py  main_OPE.py  main_T1.py  main_T2.py
examples/data/: simple_pendulum_small.npz
examples/forced-oscillator/: dataset.py  main.py  main_proximal.py
examples/glycolytic-oscillator/: dataset.py  main.py  main_T1.py  main_T2.py  main_T2_nearest.py  main_proximal.py
examples/gray-scott/: dataset.py  dataset_.py  main.py  main_T1.py  main_T1_physics.py  main_T2.py  main_T2_nearest.py  main_proximal.py  main_proximal_coercive.py
examples/lotka-voltera/: coda.py  dataset.py  dataset_mape.py  interpret.py  main.py  main_T1.py  main_T1_nearest.py  main_T2.py  main_T2_nearest.py  main_daffyduck.py  main_experimental.py  main_fortyeighty.py  main_ncf_sample_size.py  main_pr_simple.py  main_proximal.py  main_proximal_coercive.py  main_proximal_coercive_DELETEME.py  mape_experiment.sh  mape_scores.csv  ncf_sample_size.sh
examples/lotka-volterra/: main.py
examples/navier-stokes/: dataset.py  main.py  main_T1.py
examples/pendulum/: dataset.py  main.py  main_OFA.py  main_OPE.py  main_T1.py  main_T2.py  one_for_all.py  plot_losses.py
examples/selkov-model/: main.py  (+9 more)
ncf/: _utils.py  dataloader.py  learner.py  trainer.py  visualtester.py
nodax/: _utils.py  dataloader.py  learner.py  trainer.py  visualtester.py
nodebias/: dataloader.py  learner.py  trainer.py  visualtester.py
scripts/: daffyduck.sh  isambard.pbs  jade.sh
(+1256 files in other folders)
