[project]
name = "nodebias"
description = "Scaling differential equations via transferable dynamics"
version = "0.0.1"
authors = [
    { name = "Roussel Desmond Nzoyem", email = "desmond.ngueguin@gmail.com" }
]
dependencies = [
    "jax >= 0.3.4",
    # "equinox >= 0.9.2",
    # "optax >= 0.1.1",
    # "flax",
    # "jraph",
    # "pyvis==0.3.1",
    # "pytest",
]

[project.optional-dependencies]
dev = [
    "seaborn",
    "pyvista[trame]"
]

[tool.setuptools]
py-modules = ["nodebias"]
