[project]
name = "ncf"
description = "Neural Context Flows for Meta-Learning of Dynamical Systems"
version = "1.0.0"
authors = [
    { name = "Roussel Desmond Nzoyem", email = "desmond.ngueguin@gmail.com" }
]
dependencies = [
    "jax >= 0.3.4",
    "equinox >= 0.9.2",
    "optax >= 0.1.1",
    "diffrax",
]

[project.optional-dependencies]
dev = [
    "seaborn",
    "pyvista[trame]"
]

[tool.setuptools]
py-modules = ["ncf"]
